# libofx

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  ChangeLog  FAQ  INSTALL  LibOFXConfig.cmake.in  Makefile  Makefile.am  NEWS  README  README.md  autogen.sh  common.m  config.h.cmake  configure.ac  configure.in  known_bugs.txt  libofx.lsm  libofx.pc.in  libofx.spec.in  vcpkg.json
.github/workflows/: c-cpp.yml  cmake.yml  hosted-ninja-vcpkg_submod.yml
cmake/modules/: FindOpenSP.cmake
doc/: .cvsignore  Makefile  Makefile.am  doxygen.cfg  doxygen.cfg.in  implementation_notes.txt  main_doc.c
doc/ofx_sample_files/: another-example.xml  downcast.ofx  example-listing1.xml  failing-ofx-file1.xml  failing-ofx-file2.xml  heap-buffer-overflow-1.ofx  heap-buffer-overflow-2.ofx  null-ptr-deref-1.ofx  null-ptr-deref-2.ofx  ofx-2.1.1-sect-13.12.ofx  ofx-2.1.1-sect-13.13.ofx  ofx-2.1.1-sect-16.5.3.2.ofx  ofx-2.1.1-sect-16.5.4.2.ofx  ofx-2.1.1-sect-16.5.6.2.ofx  ofx-2.1.1-sect-16.5.6.5.ofx  ofx-2.1.1-sect-8.5.5.ofx  ofx_spec160_stmtrs_example.sgml  ofx_spec201_stmtrs_example.xml  use-after-free.ofx
dtd/: Makefile.am  ofc.dtd  ofx160.dtd
getopt/: CMakeLists.txt  LICENSE  Makefile.am  getopt.c  getopt.h
inc/: libofx.h  libofx.h.in
lib/: CMakeLists.txt  Makefile  Makefile.am  callback.cpp  callback.hh  context.cpp  context.hh  file_preproc.cpp  file_preproc.hh  getopt.c  getopt.h  messages.cpp  messages.hh  ofc_sgml.cpp  ofc_sgml.hh  ofx_aggregate.hh  ofx_container_account.cpp  ofx_container_generic.cpp  ofx_container_main.cpp  ofx_container_position.cpp  ofx_container_security.cpp  ofx_container_statement.cpp  ofx_container_transaction.cpp  ofx_containers.hh  ofx_containers_misc.cpp  ofx_error_msg.hh  ofx_preproc.cpp  ofx_preproc.h  ofx_preproc.hh  ofx_proc_rs.cpp  ofx_proc_rs.h  ofx_request.cpp  ofx_request.hh  ofx_request_accountinfo.cpp  ofx_request_accountinfo.hh  ofx_request_statement.cpp  ofx_request_statement.hh  ofx_sgml.cpp  ofx_sgml.hh  ofx_utilities.cpp  (+5 more)
m4/: os.m4
ofx2qif/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  ofx2qif.c
ofxconnect/: .gitignore  CMakeLists.txt  Makefile.am  README.privateserver  cmdline.c  cmdline.ggo  cmdline.h  nodeparser.cpp  nodeparser.h  ofxconnect  ofxconnect.cpp  ofxpartner.cpp  ofxpartner.h  postofx.py  test-privateserver.asc  test-privateserver.sh
ofxdump/: .cvsignore  .gitignore  CMakeLists.txt  Makefile  Makefile.am  cmdline.c  cmdline.ggo  cmdline.h  getopt.h  ofxdump.cpp
